--- a/app/(path)/architectural-projects/[architectural]/interior.css
+++ b/app/(path)/architectural-projects/[architectural]/interior.css
@@ -1,45 +1,44 @@
-.head-inter{
-    background: #834B31;
+.head-inter {
+    background: #834b31;
     width: 100%;
     padding: 60px 20px;
     margin-bottom: 60px;
 }
 
-.head-inter h1{
-    color: #FFF;
+.head-inter h1 {
+    color: #fff;
     font-size: 50px;
     font-weight: 700;
 }
 
-.head-inter p{
-    color: #FFF;
+.head-inter p {
+    color: #fff;
 }
 
-.head-inter a{
-    color: #FFF;
+.head-inter a {
+    color: #fff;
     font-size: 17px;
     text-decoration: none;
     /* transition: background .3s, border .3s, border-radius .3s, box-shadow .3s, transform var(--e-transform-transition-duration, .4s); */
 }
 
-.card-Projects>.image-container>.image-container-div>.centered>a{
-   color: white; 
+.card-Projects > .image-container > .image-container-div > .centered > a {
+    color: white;
 }
-.card-Projects>.image-container>.image-container-div>.centered>a:hover{
-    color: #4dbc15; 
- }
-.head-inter a:hover{
+.card-Projects > .image-container > .image-container-div > .centered > a:hover {
     color: #4dbc15;
-    transition: all .2s linear;
 }
-
+.head-inter a:hover {
+    color: #4dbc15;
+    transition: all 0.2s linear;
+}
 
 @media screen and (min-width: 300px) and (max-width: 769px) {
-    .head-inter{
+    .head-inter {
         margin-bottom: 30px;
     }
-    .head-inter h1{
-        color: #FFF;
+    .head-inter h1 {
+        color: #fff;
         font-size: 30px;
         font-weight: 700;
     }
@@ -51,21 +50,21 @@
     margin-bottom: 60px;
 }
 
-.Raja-text h2{
-    color: #7C3717 !important;
+.Raja-text h2 {
+    color: #7c3717 !important;
     font-size: 38px;
     font-weight: 700;
     margin-bottom: 2rem;
 }
 
-.Raja-text h3{
+.Raja-text h3 {
     color: #131d3b;
     font-size: 1rem;
     font-weight: 700;
     margin-bottom: 20px;
 }
 
-.Raja-text p{
+.Raja-text p {
     color: #171717;
     text-align: justify;
     font-size: 17px;
@@ -73,22 +72,20 @@
 }
 
 @media screen and (min-width: 300px) and (max-width: 769px) {
-    .Raja-text h2{
+    .Raja-text h2 {
         font-size: 25px;
     }
 }
 
-
-
 /*  */
-.card-Projects h4{
+.card-Projects h4 {
     color: #131d3b;
     font-size: 38px;
     font-weight: 700;
     margin-bottom: 10px;
 }
 
-.card-Projects .image-container{  
+.card-Projects .image-container {
     color: white;
     /* text-align: center; */
     position: relative;
@@ -98,16 +95,16 @@
     text-decoration: none !important;
 }
 
-a{
-    Color:#FFF;
+a {
+    color: #fff;
     text-decoration: none;
 }
 
-.card-Projects .image-container a:hover{
+.card-Projects .image-container a:hover {
     color: #4dbc15;
 }
 
-.card-Projects .centered{
+.card-Projects .centered {
     width: 94%;
     position: absolute;
     top: 65%;
@@ -120,20 +117,20 @@ a{
     padding: 20px;
 }
 
-.card-Projects .centered:hover{ 
+.card-Projects .centered:hover {
     margin: 20px 0;
     background: rgba(0, 0, 0, 0.5);
     top: 56%;
-    transition: .5s ease;
+    transition: 0.5s ease;
     transform: translate(-2%, -30%);
     padding: 20px;
 }
 
-.image-container:hover .centered{
+.image-container:hover .centered {
     margin: 20px 0;
     background: rgba(0, 0, 0, 0.5);
     top: 56%;
-    transition: .5s ease;
+    transition: 0.5s ease;
     transform: translate(-2%, -30%);
 }
 
@@ -147,48 +144,55 @@ a{
     }
 } */
 
-@media screen and (min-width:600px) and (max-width:769px) {
-    .image-container:hover .centered{
+.architecuralPage {
+    margin-top: 8rem;
+}
+
+@media screen and (min-width: 600px) and (max-width: 769px) {
+    .image-container:hover .centered {
         padding: 10px 10px;
         margin: 10px 0;
         transform: translate(-0%, -30%);
     }
-    .card-Projects .centered{
+    .card-Projects .centered {
         width: 90%;
         padding: 10px 10px;
         margin: 10px 0;
         transform: translate(-0%, -20%);
     }
-    .card-Projects h4{
+    .card-Projects h4 {
         font-size: 30px;
+    }
+    .architecuralPage {
+        margin-top: 0px;
     }
 }
 
-@media screen and (min-width:376px) and (max-width:426px) {
-    .image-container:hover .centered{
+@media screen and (min-width: 376px) and (max-width: 426px) {
+    .image-container:hover .centered {
         padding: 10px 10px;
         margin: 10px 0;
         transform: translate(-2%, -20%);
     }
-    .card-Projects .centered{
+    .card-Projects .centered {
         width: 94%;
         padding: 10px 10px;
         margin: 10px 0;
         transform: translate(-2%, -20%);
     }
 
-    .card-Projects h4{
+    .card-Projects h4 {
         font-size: 25px;
     }
 }
 
-@media screen and (min-width:321px) and (max-width:376px) {
-    .card-Projects .centered:hover{
+@media screen and (min-width: 321px) and (max-width: 376px) {
+    .card-Projects .centered:hover {
         padding: 10px 10px;
         margin: 10px 0;
         transform: translate(-0%, -10%);
     }
-    .card-Projects .centered{
+    .card-Projects .centered {
         width: 94%;
         padding: 10px 10px;
         margin: 10px 0;
@@ -196,34 +200,34 @@ a{
     }
 }
 
-@media screen and (min-width:299px) and (max-width:321px) {
-    .card-Projects .centered:hover{
+@media screen and (min-width: 299px) and (max-width: 321px) {
+    .card-Projects .centered:hover {
         padding: 10px 10px;
         margin: 10px 0;
         transform: translate(-0%, -10%);
     }
-    .card-Projects .centered{
+    .card-Projects .centered {
         width: 93%;
         padding: 10px 10px;
         margin: 10px 0;
-        transform:translate(-0%, -10%);
+        transform: translate(-0%, -10%);
     }
 }
 
 .Build-page {
-    background: #4DBC15;
+    background: #4dbc15;
     padding: 60px 0;
     /* margin: 60px 0; */
-} 
+}
 
-.build-header h5{
+.build-header h5 {
     color: #fff;
     font-size: 38px;
     font-weight: 700;
     font-size: 30px;
 }
 
-.build-header p{
+.build-header p {
     color: #fff;
     font-weight: 400;
     font-size: 17px;
@@ -237,22 +241,22 @@ a{
     transition: 0.5s;
 } */
 
-.Build-page button{
-    background: #FFFFFF;
+.Build-page button {
+    background: #ffffff;
     padding: 20px 40px 20px 40px;
-    border: 2px solid #FFFFFF;
+    border: 2px solid #ffffff;
 }
 
-.Build-page button:hover{
-    background: #4DBC15;
+.Build-page button:hover {
+    background: #4dbc15;
     color: #fff;
 }
 
-@media screen and (max-width:767px) {
-    .build-header h5{
+@media screen and (max-width: 767px) {
+    .build-header h5 {
         font-size: 30px;
     }
-    .card-Projects h4{
+    .card-Projects h4 {
         font-size: 30px;
         margin: 20px 0px;
     }
