--- a/app/(adsrunningpage)/interior-design-chennai/interiorland.scss
+++ b/app/(adsrunningpage)/interior-design-chennai/interiorland.scss
@@ -123,7 +123,7 @@
         font-size: 30px;
         font-weight: 600;
         padding-top: 50px;
-        text-align: right;
+        text-align: center;
     }
 }
 .explore-architect {
