--- a/style/homestyle.scss
+++ b/style/homestyle.scss
@@ -376,6 +376,9 @@ a {
     text-decoration: none !important;
 }
 
+.fs_12 {
+    font-size: 14px !important;
+}
 @media screen and (max-width: 767px) {
     .advantage-get .w-20 {
         width: 50% !important;
@@ -424,7 +427,7 @@ a {
 }
 .form-inter {
     p {
-        font-size: 14px;
+        font-size: 18px;
         font-weight: 600;
     }
     .con-form-page {
@@ -444,9 +447,9 @@ a {
         padding-left: 30px;
         border: none;
         color: #fff;
-        font-size: 15px;
+        font-size: 12px;
         font-weight: 600;
-        border-radius: 20px;
+        border-radius: 5px;
     }
 }
 .btn-close {
@@ -480,7 +483,7 @@ a {
     justify-content: center;
     align-items: center;
 }
-.popup-shw {
+.popup-shw{
     .burget-check {
         label {
             font-size: 12px;
@@ -503,3 +506,4 @@ a {
     background-color: #000000;
     padding: 10px;
 }
+
