Homepage and budgent error cleared

--- a/app/(path)/modular-kitchen/modularkitchenlanding.scss
+++ b/app/(path)/modular-kitchen/modularkitchenlanding.scss
@@ -522,6 +522,9 @@ width:25%;
       font-size: 12px;
     }
   }
+  .modal-body{
+    padding: 0 !important;
+  }
   .form-check-inline{
     margin-right:5px;
   }
