build error cleared

--- a/app/(path)/about-the-best-interior-designer-in-chennai/about-page.css
+++ b/app/(path)/about-the-best-interior-designer-in-chennai/about-page.css
@@ -3,7 +3,8 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 85px 0px;
+    padding: 130px 0px;
+    margin-top: 20px;
 }
 
 .about-banner h1 {
