--- a/style/Header.css
+++ b/style/Header.css
@@ -3,7 +3,8 @@
     top: 0;
     background: #4dbc15;
     min-height: 50px;
-    align-content: center;
+    display: flex;
+    align-items: center;
 }
 
 .header-body a {
@@ -13,13 +14,12 @@
     font-weight: 500;
 }
 
-/* nav */
+/* Navbar */
 .navbar {
     display: flex;
     align-items: center;
     background-color: white;
-    /* padding: 0px 0px 10px 0px; */
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 .navbar .logo {
@@ -48,12 +48,12 @@
     list-style: none;
     font-size: 14px;
     font-weight: 600;
+    margin-bottom: 0;
 }
 
 .navbar .menu li {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin: 0px 5px;
+    padding: 20px 0;
+    margin: 0 5px;
 }
 
 .navbar .menu li a {
@@ -61,14 +61,14 @@
     font-weight: 600;
     text-decoration: none;
     color: black;
-    padding: 0px 8px;
+    padding: 0 8px;
 }
 
-/* Ensure the hover effect is specific enough */
+/* Hover */
 .navbar .menu li a:hover,
 .navbar .menu li span:hover {
-    color: #4dbc15 !important;
-    transition: all 0.2s linear;
+    color: #4dbc15;
+    transition: color 0.2s linear;
 }
 
 /* Dropdown */
@@ -76,20 +76,18 @@
     position: relative;
 }
 
-/* Dropdown hidden */
 .navbar .menu li .dropdown-content {
     display: none;
     position: absolute;
+    top: 100%;
+    left: 0;
     background-color: white;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-    z-index: 9;
+    z-index: 99;
     width: max-content;
-    margin: -40px;
     border-top: 3px solid #4caf50;
-    margin-top: 15px;
 }
 
-/* Dropdown links */
 .navbar .menu li .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -97,60 +95,52 @@
     display: block;
 }
 
-/* Hover effect for dropdown links */
 .navbar .menu li .dropdown-content a:hover {
     background-color: #f1f1f1;
-    color: #4dbc15 !important;
+    color: #4dbc15;
 }
 
-/* Show dropdown content on hover */
 .navbar .menu li.dropdown:hover .dropdown-content {
     display: block;
 }
 
-.navbar .menu {
-    margin-bottom: 0px !important;
-}
-
+/* Responsive */
 @media screen and (max-width: 1025px) {
     .navbar .logo img {
         width: 80px;
-        margin-right: 10px;
     }
 
     .navbar {
-        display: flex;
-        background-color: white;
-        /* padding: 0px 0px 10px 0px; */
         flex-wrap: nowrap;
         justify-content: space-between;
-        align-items: center;
     }
 
     .navbar .menu {
-        padding: 0px;
-        margin-bottom: 0px !important;
+        padding: 0;
     }
 
     .navbar .menu li {
-        margin: 0px;
+        margin: 0;
     }
 }
 
+/* Social icons */
 .header-body .social a {
-    font-size: 23px !important;
-    margin: 5px !important;
+    font-size: 23px;
+    margin: 5px;
 }
 
+/* Fixed navbar */
 .fixed-navbar {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000; /* Ensure the navbar is above other content */
-    background-color: white; /* Optional: Set a background color */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for better visibility */
+    z-index: 1000;
+    background-color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+/* Sidebar */
 .sidebar-content-div {
     position: fixed;
     top: 60%;
@@ -158,39 +148,39 @@
     transform: translateY(-50%);
     display: flex;
     flex-direction: column;
-    z-index: 99999990000000000000;
-    padding: 10px 0px;
+    z-index: 9999;
+    padding: 10px 0;
 }
 
 .icon-sty {
     background: #52ca15a3;
     width: 50%;
     margin-left: auto;
-    margin-right: 0;
-    border-radius: 10px 0px 0px 10px;
+    border-radius: 10px 0 0 10px;
     margin-bottom: 20px;
 }
+
 .hd-btn button {
     font-size: 15px;
     padding: 8px 10px;
     background: #52ca15a3;
-    border: 0px;
+    border: 0;
     border-radius: 5px;
 }
+
 .emil-bx {
     background: #fff;
     border-radius: 35px;
     width: 40px;
     height: 40px;
 }
+
 .mail-icon-div {
     display: inline-block;
     background: #fdfdfd;
     width: 40px;
-    margin-left: 5px;
-    margin-top: 20px;
+    margin: 20px 0 20px 5px;
     border-radius: 50%;
-    margin-bottom: 20px;
     padding: 4px;
 }
 
